kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-info-service
  labels:
    app: customer-info
spec:
  selector:
    matchLabels:
      app: customer-info
  template:
    metadata:
      labels:
        app: customer-info
    spec:
      hostNetwork: false
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
