kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-info-service
  labels:
    app: customer-info-service
spec:
  type: NodePort
  selector:
    app: customer-info-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001
