kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: customer-info-service
spec:
  rules:
    - host: customer-info.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-info-service
                port:
                  number: 80
